--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
+    <link rel="stylesheet" href="styels/style.css">
 </head>
 <body>
-    
+    <div class="div">
+        <h2 class="head">My Website</h2>
+        <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto aspernatur laudantium omnis facere quas, provident at voluptates maiores consectetur modi error inventore cupiditate minima animi accusamus vitae nulla alias enim.</p>
+        <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus soluta laboriosam eaque incidunt aliquam ut veritatis voluptatibus nihil? Recusandae optio ea voluptate sit beatae quas quaerat voluptatibus rerum at pariatur.</p>
+        <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto aspernatur laudantium omnis facere quas, provident at voluptates maiores consectetur modi error inventore cupiditate minima animi accusamus vitae nulla alias enim.</p>
+        <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus soluta laboriosam eaque incidunt aliquam ut veritatis voluptatibus nihil? Recusandae optio ea voluptate sit beatae quas quaerat voluptatibus rerum at pariatur.</p>
+    </div>
 </body>
 </html>
